refactor: use pipeline pattern for processing code